force-app/main/default/objects/Terms_Condition__c/Terms_Condition__c.object-meta.xml
<CustomObject>
    <label>Terms &amp; Condition</label>
    <nameField>
        <displayFormat>TC-{000}</displayFormat>
        <label>Terms &amp; Conditin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms &amp; Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>