force-app/main/default/objects/Terms_Condition__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Terms &amp; Conditions</relationshipLabel>
    <relationshipName>Terms_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>