force-app/main/default/objects/Terms_Condition__c/fields/Titile__c.field-meta.xml
<CustomField>
    <fullName>Titile__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>